Multiple classes Clustor, Sector, and Block where added.

--- a/OperatingSystemsProject/OperatingSystemsProject/OperatingSystemsProject.vcxproj
+++ b/OperatingSystemsProject/OperatingSystemsProject/OperatingSystemsProject.vcxproj
@@ -143,11 +143,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Block.h" />
+    <ClInclude Include="Clustor.h" />
+    <ClInclude Include="Sector.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Block.cpp" />
+    <ClCompile Include="Clustor.cpp" />
     <ClCompile Include="OperatingSystemsProject.cpp" />
+    <ClCompile Include="Sector.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
