--- a/OperatingSystemsProject/OperatingSystemsProject/OperatingSystemsProject.vcxproj
+++ b/OperatingSystemsProject/OperatingSystemsProject/OperatingSystemsProject.vcxproj
@@ -145,7 +145,7 @@
   <ItemGroup>
     <ClInclude Include="Block.h" />
     <ClInclude Include="Clustor.h" />
-    <ClInclude Include="CreateFile.h" />
+    <ClInclude Include="FileManager.h" />
     <ClInclude Include="Sector.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -153,7 +153,7 @@
   <ItemGroup>
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Clustor.cpp" />
-    <ClCompile Include="CreateFile.cpp" />
+    <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="OperatingSystemsProject.cpp" />
     <ClCompile Include="Sector.cpp" />
     <ClCompile Include="stdafx.cpp">
